force-app/main/default/objects/Customer_360__c/Customer_360__c.object-meta.xml
<CustomObject>
    <description>Object saves account documentations and will be used to process data with AI
RO-2434</description>
    <label>Customer 360</label>
    <nameField>
        <displayFormat>Customer360-{00000}</displayFormat>
        <label>Customer 360 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer 360</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>