force-app/main/default/objects/Customer_360__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>RO-2434</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer 360 Records</relationshipLabel>
    <relationshipName>Customer_360s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>