force-app/main/default/objects/Customer_360__c/fields/Account_Documentation_Title__c.field-meta.xml
<CustomField>
    <fullName>Account_Documentation_Title__c</fullName>
    <description>Used from Agency Team to structure account documentation records</description>
    <label>Account Documentation Title</label>
    <type>TextArea</type>
</CustomField>