force-app/main/default/objects/Customer_360__c/fields/Account_Documentation_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Documentation_Type__c</fullName>
    <description>Used by Agency Team to structure account documentation records</description>
    <label>Account Documentation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>