force-app/main/default/objects/Customer_360__c/fields/ACM_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>ACM_Assignment_Date__c</fullName>
    <description>Date and time when the ACM was assigned for the handover</description>
    <inlineHelpText>Zeitstempel der ACM-Zuweisung für SLA-Tracking.</inlineHelpText>
    <label>ACM Assignment Date</label>
    <type>DateTime</type>
</CustomField>