force-app/main/default/objects/Customer_360__c/fields/Active_Account_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Active_Account_Documentation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-2434</description>
    <inlineHelpText>Marks the active account documentation record.</inlineHelpText>
    <label>Active Account Documentation</label>
    <type>Checkbox</type>
</CustomField>