force-app/main/default/objects/Customer_360__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>RO-2434</description>
    <label>Content</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>