force-app/main/default/objects/Customer_360__c/fields/Content_max_limit__c.field-meta.xml
<CustomField>
    <fullName>Content_max_limit__c</fullName>
    <description>To save the content of the Helper records. RO-2473</description>
    <label>Content (max limit)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>