force-app/main/default/objects/Customer_360__c/fields/Current_Wizard_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Wizard_Step__c</fullName>
    <description>Tracks the current step in the Handover Wizard to enable resume functionality</description>
    <inlineHelpText>The current or last step the user was on in the Handover Wizard</inlineHelpText>
    <label>Current Wizard Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-check</fullName>
                <default>true</default>
                <label>Pre-check</label>
            </value>
            <value>
                <fullName>Notes</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>