force-app/main/default/objects/Customer_360__c/fields/Customer_Goals__c.field-meta.xml
<CustomField>
    <fullName>Customer_Goals__c</fullName>
    <description>Customer goals and expected outcomes from Handover Documentation</description>
    <inlineHelpText>Kundenziele, KPI-Erwartungen (z.B. #applications, #hires) und alle gemachten Sales-Zusagen für messbare Erfolgskontrolle.</inlineHelpText>
    <label>Customer Goals &amp; Expected Outcomes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>