force-app/main/default/objects/Customer_360__c/fields/Documentation_Status__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Status__c</fullName>
    <description>Status of the Handover Documentation process</description>
    <inlineHelpText>Aktueller Status der Handover-Dokumentation.</inlineHelpText>
    <label>Documentation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>