force-app/main/default/objects/Customer_360__c/fields/Donts__c.field-meta.xml
<CustomField>
    <fullName>Donts__c</fullName>
    <description>Don&apos;ts - what should be avoided with this customer</description>
    <inlineHelpText>Dokumentiere, was vermieden werden sollte (No-Go Themen, kritische Trigger, unerwünschte Kommunikationsarten).</inlineHelpText>
    <label>Don&apos;ts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>