force-app/main/default/objects/Customer_360__c/fields/Dos__c.field-meta.xml
<CustomField>
    <fullName>Dos__c</fullName>
    <description>Do&apos;s - what the customer responds well to</description>
    <inlineHelpText>Dokumentiere, worauf der Kunde positiv reagiert (bevorzugter Kommunikationsstil, Tonalität, erfolgreiche Vorgehensweisen).</inlineHelpText>
    <label>Do&apos;s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>