force-app/main/default/objects/Customer_360__c/fields/Handover_Documentation_Quality__c.field-meta.xml
<CustomField>
    <fullName>Handover_Documentation_Quality__c</fullName>
    <description>Quality assessment of the handover documentation provided by ACM after Internal Handover Call</description>
    <inlineHelpText>Bewertung der Qualität der Handover-Dokumentation durch den ACM nach dem Internal Handover Call.</inlineHelpText>
    <label>Handover Documentation Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Minor Gaps (filled in Internal handover)</fullName>
            </value>
            <value>
                <fullName>Major Gaps (filled in Internal Handover)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>