force-app/main/default/objects/Customer_360__c/fields/Handover_Quality_Comments__c.field-meta.xml
<CustomField>
    <fullName>Handover_Quality_Comments__c</fullName>
    <description>Comments from ACM about the quality of the handover documentation after Internal Handover Call</description>
    <inlineHelpText>Kommentare des ACM zur Qualität der Handover-Dokumentation (max. 3 Sätze).</inlineHelpText>
    <label>Handover Quality Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>