force-app/main/default/objects/Customer_360__c/fields/Handover_Urgency__c.field-meta.xml
<CustomField>
    <fullName>Handover_Urgency__c</fullName>
    <description>Phase 19 – Handover urgency from customer perspective.</description>
    <inlineHelpText>Dringlichkeit aus Kundensicht. Bitte auswählen, wie schnell der Kunde starten möchte.</inlineHelpText>
    <label>Handover Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>