force-app/main/default/objects/Customer_360__c/fields/IHC_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>IHC_Meeting_Date__c</fullName>
    <description>Date when Internal Handover Call meeting was completed</description>
    <inlineHelpText>Zeitstempel der Durchführung des internen Handover-Meetings.</inlineHelpText>
    <label>IHC Meeting Date</label>
    <type>DateTime</type>
</CustomField>