force-app/main/default/objects/Customer_360__c/fields/IHC_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>IHC_Scheduled_Date__c</fullName>
    <description>Date when Internal Handover Call was scheduled</description>
    <inlineHelpText>Zeitstempel der Terminvereinbarung für das interne Handover-Meeting.</inlineHelpText>
    <label>IHC Scheduled Date</label>
    <type>DateTime</type>
</CustomField>