force-app/main/default/objects/Customer_360__c/fields/Key_Logistics__c.field-meta.xml
<CustomField>
    <fullName>Key_Logistics__c</fullName>
    <description>Key logistics and operational notes from Handover Documentation</description>
    <inlineHelpText>Dokumentiere operative Details für Onboarding &amp; Kickoff (z.B. Go-Live Timing, Prozesse, ATS-Besonderheiten, Schichtmodelle).</inlineHelpText>
    <label>Key Logistics / Operational Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>