force-app/main/default/objects/Customer_360__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer 360</relationshipLabel>
    <relationshipName>Customer_360</relationshipName>
    <type>Lookup</type>
</CustomField>