force-app/main/default/objects/Customer_360__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Optional field for additional information that does not fit other categories</description>
    <inlineHelpText>Optionales Feld für zusätzliche Informationen, die in keine der anderen Kategorien passen.</inlineHelpText>
    <label>Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>