force-app/main/default/objects/Customer_360__c/fields/Relationship_Rating__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Rating__c</fullName>
    <description>Relationship rating from 1-10 from Handover Documentation</description>
    <inlineHelpText>Bewerte die Stabilität und Qualität der Kundenbeziehung auf einer Skala von 1 (sehr instabil) bis 10 (sehr stabil).</inlineHelpText>
    <label>Relationship Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>