force-app/main/default/objects/Customer_360__c/fields/Relationship_Reason__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Reason__c</fullName>
    <description>Reason for the relationship rating from Handover Documentation</description>
    <inlineHelpText>Begründe kurz den vergebenen Beziehungswert mit konkreten Faktoren und Beobachtungen.</inlineHelpText>
    <label>Relationship Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>