force-app/main/default/objects/Customer_360__c/fields/Risks__c.field-meta.xml
<CustomField>
    <fullName>Risks__c</fullName>
    <description>Risks and red flags from Handover Documentation</description>
    <inlineHelpText>Erfasse alle Risiken, die die Zusammenarbeit oder Zielerreichung gefährden können (z.B. Verhaltensrisiken, Budget, interne Blocker).</inlineHelpText>
    <label>Risks / Red Flags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>