force-app/main/default/objects/Customer_360__c/fields/Time_ACM_To_IHC_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Time_ACM_To_IHC_Scheduled__c</fullName>
    <description>Elapsed business minutes from ACM Assignment to Internal Handover Call Scheduled. Calculated using org Business Hours settings.</description>
    <inlineHelpText>Geschäftsminuten von ACM-Zuweisung bis IHC geplant.</inlineHelpText>
    <label>Time: ACM to IHC Scheduled (min)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>