force-app/main/default/objects/Customer_360__c/fields/Time_CloseWon_To_ACM_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Time_CloseWon_To_ACM_Assignment__c</fullName>
    <description>Elapsed business minutes from Opportunity Closed Won to ACM Assignment. Calculated using org Business Hours settings.</description>
    <inlineHelpText>Geschäftsminuten von Opportunity Closed Won bis ACM-Zuweisung.</inlineHelpText>
    <label>Time: CloseWon to ACM Assignment (min)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>