force-app/main/default/objects/Customer_360__c/fields/Time_CloseWon_To_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Time_CloseWon_To_Documentation__c</fullName>
    <description>Elapsed business minutes from Opportunity Closed Won to Handover Documentation Completed. Calculated using org Business Hours settings.</description>
    <inlineHelpText>Geschäftsminuten von Opportunity Closed Won bis Dokumentation abgeschlossen.</inlineHelpText>
    <label>Time: CloseWon to Documentation (min)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>