force-app/main/default/objects/Customer_360__c/fields/Time_IHC_Scheduled_To_Completed__c.field-meta.xml
<CustomField>
    <fullName>Time_IHC_Scheduled_To_Completed__c</fullName>
    <description>Elapsed business minutes from Internal Handover Call Scheduled to Completed. Calculated using org Business Hours settings.</description>
    <inlineHelpText>Geschäftsminuten von IHC geplant bis IHC abgeschlossen.</inlineHelpText>
    <label>Time: IHC Scheduled to Completed (min)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>