force-app/main/default/objects/Customer_360__c/fields/Time_Spent_PreCheck_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_PreCheck_Minutes__c</fullName>
    <description>Total time in minutes spent by AE on the Pre-check section of the Handover wizard. Accumulates across multiple visits.</description>
    <inlineHelpText>Gesamtzeit in Minuten, die der AE im Pre-Check-Abschnitt des Handover-Assistenten verbracht hat.</inlineHelpText>
    <label>Time Spent on Pre-check (Minutes)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>