force-app/main/default/objects/Customer_360__c/fields/Time_To_ACM_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Time_To_ACM_Assignment__c</fullName>
    <description>Business minutes from Contract Received to ACM Assignment. Calculated using org Business Hours settings.</description>
    <inlineHelpText>Time from Contract Received to ACM Assignment (business minutes).</inlineHelpText>
    <label>Time to ACM Assignment</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>