force-app/main/default/objects/Customer_360__c/fields/Time_To_Documentation_Completion__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Documentation_Completion__c</fullName>
    <description>Business minutes from Contract Received to Documentation Completed. Calculated using org Business Hours settings.</description>
    <inlineHelpText>Time from Contract Received to Documentation Completed (business minutes).</inlineHelpText>
    <label>Time to Documentation Completion</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>