force-app/main/default/objects/Customer_360__c/fields/Timestamp_Content_Generated__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Content_Generated__c</fullName>
    <description>Timestamp to document when the content of the Helper Records was generated. RO-2473</description>
    <label>Timestamp Content Generated</label>
    <type>DateTime</type>
</CustomField>