force-app/main/default/objects/Customer_360__c/fields/Timestamp_Documentation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Documentation_Completed__c</fullName>
    <description>Date and time when the Handover Documentation was completed</description>
    <inlineHelpText>Zeitstempel der Fertigstellung der Handover-Dokumentation.</inlineHelpText>
    <label>Timestamp Documentation Completed</label>
    <type>DateTime</type>
</CustomField>