force-app/main/default/objects/Customer_360__c/fields/Timestamp_Step_Notes_Completed__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Step_Notes_Completed__c</fullName>
    <description>Timestamp when the Notes step was completed. Used for tracking time spent on each wizard step.</description>
    <inlineHelpText>When the user completed the Notes step</inlineHelpText>
    <label>Timestamp Step Notes Completed</label>
    <type>DateTime</type>
</CustomField>