force-app/main/default/objects/Customer_360__c/fields/Timestamp_Step_Notes_Started__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Step_Notes_Started__c</fullName>
    <description>Timestamp when the Notes step was started. Used for tracking time spent on each wizard step.</description>
    <inlineHelpText>When the user started the Notes step</inlineHelpText>
    <label>Timestamp Step Notes Started</label>
    <type>DateTime</type>
</CustomField>