force-app/main/default/objects/Customer_360__c/fields/Timestamp_Step_PreCheck_Completed__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Step_PreCheck_Completed__c</fullName>
    <description>Timestamp when the Pre-check step was completed. Used for tracking time spent on each wizard step.</description>
    <inlineHelpText>When the user completed the Pre-check step</inlineHelpText>
    <label>Timestamp Step Pre-check Completed</label>
    <type>DateTime</type>
</CustomField>