force-app/main/default/objects/Customer_360__c/fields/Timestamp_Step_PreCheck_Started__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Step_PreCheck_Started__c</fullName>
    <description>Timestamp when the Pre-check step was started. Used for tracking time spent on each wizard step.</description>
    <inlineHelpText>When the user started the Pre-check step</inlineHelpText>
    <label>Timestamp Step Pre-check Started</label>
    <type>DateTime</type>
</CustomField>