force-app/main/default/objects/Customer_360__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>RO-2434</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Documentation</fullName>
            </value>
            <value>
                <fullName>Onboarding Documentation</fullName>
            </value>
            <value>
                <fullName>Calls</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Lost Opps</fullName>
            </value>
            <value>
                <fullName>Pilot Handover</fullName>
            </value>
            <value>
                <fullName>Deals</fullName>
                <isActive>false</isActive>
                <label>Deals</label>
            </value>
            <value>
                <fullName>Tasks</fullName>
                <isActive>false</isActive>
                <label>Tasks</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>