force-app/main/default/objects/Customer_360__c/validationRules/Active_Account_Documentation_Wrong_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Account_Documentation_Wrong_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
					Active_Account_Documentation__c ,
					NOT( ISPICKVAL(Type__c , &quot;Account Documentation&quot;))
)</errorConditionFormula>
    <errorMessage>You can only mark an account documentation record as active account documentation</errorMessage>
</ValidationRule>